--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -18,6 +18,7 @@
 @media screen and (max-width: 621px) {
   .header {
     width: 100%;
+    min-width: 320px;
     height: 56px;
     margin: 28px auto 0;
   }
