--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -3,7 +3,7 @@
   height: 40px;
   font-family: "Inter", ‘Arial’, sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 400;
   font-size: 14px;
   line-height: 13px;
   color: #000000;
