--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,8 +1,8 @@
 .popup {
   display: none;
+  width: 100%;
+  height: 100vh;
   top: 0;
-  right: 0;
-  bottom: 0;
   left: 0;
   position: absolute;
   background: rgba(0, 0, 0, 0.5);
