--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -1,9 +1,10 @@
 .elements__like {
   width: 22px;
   height: 19px;
-  background-image: url(../../../images/elements__like.png);
-  background-size: cover;
+  background-image: url(../../../images/elements__like.svg);
   margin: auto 0;
+  background-color: #ffffff;
+  border: none;
   cursor: pointer;
 }
 
