--- a/blocks/popup/__button-save/popup__button-save.css
+++ b/blocks/popup/__button-save/popup__button-save.css
@@ -3,8 +3,9 @@
   height: 50px;
   background: #000000;
   border-radius: 2px;
+  border: none;
   margin-top: 48px;
-  font-family: Inter;
+  font-family: "Inter", ‘Arial’, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
