--- a/blocks/popup/__information/popup__information.css
+++ b/blocks/popup/__information/popup__information.css
@@ -1,6 +1,6 @@
 .popup__information {
   width: 358px;
-  margin: 0;
+  margin: 34px auto 37px;
   padding: 0;
   border: none;
 }
@@ -8,5 +8,6 @@
 @media screen and (max-width: 621px) {
   .popup__information {
     width: 238px;
+    margin: 25px auto;
   }
 }
