--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -3,11 +3,9 @@
   height: 50px;
   margin: auto 0 auto auto;
   border: 2px solid #ffffff;
+  background: black;
   box-sizing: border-box;
   border-radius: 2px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   cursor: pointer;
 }
 
@@ -17,9 +15,7 @@
 
 @media screen and (max-width: 986px) {
   .profile__button-add {
-    width: 100%;
     width: 581px;
-    background-size: contain;
     margin: 0;
   }
 }
