--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -1,10 +1,11 @@
 .profile__button-edit {
   width: 24px;
   height: 24px;
-  margin: 15px 0 auto 18px;
-  background-image: url(../../../images/profile__button-edit.png);
-  background-size: cover;
+  margin-top: 15px;
+  border: 1px solid #ffffff;
+  background: black;
   cursor: pointer;
+  padding: 0;
 }
 
 .profile__button-edit:hover {
@@ -15,6 +16,6 @@
   .profile__button-edit {
     width: 18px;
     height: 18px;
-    margin: 8px auto auto 10px;
+    margin-top: 8px;
   }
 }
