--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,6 +1,5 @@
 .profile {
-  width: 68.75%;
-  min-height: 120px;
+  width: 880px;
   margin: 40px auto 0;
   display: flex;
   flex-direction: row;
