--- a/blocks/profile/__profile-info/profile__profile-info.css
+++ b/blocks/profile/__profile-info/profile__profile-info.css
@@ -1,5 +1,5 @@
 .profile__profile-info {
-  max-width: 336px;
+  width: 336px;
   margin: auto auto auto 0;
   display: flex;
   flex-direction: column;
@@ -10,5 +10,10 @@
   .profile__profile-info {
     margin: 22.75px auto 36px;
     align-items: center;
+  }
+}
+@media screen and (max-width: 621px) {
+  .profile__profile-info {
+    width: 88.125%;
   }
 }
