--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -11,7 +11,7 @@
 
 @media screen and (max-width: 621px) {
   .footer {
-    width: 77.657%;
+    width: 282px;
     max-width: 482.25px;
     min-width: 282px;
     font-size: 14px;
