--- a/blocks/elements/__element/elements__element.css
+++ b/blocks/elements/__element/elements__element.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   border-radius: 10px;
   background-color: #ffffff;
+  position: relative;
 }
 
 @media screen and (max-width: 621px) {
