--- a/blocks/elements/__image/elements__image.css
+++ b/blocks/elements/__image/elements__image.css
@@ -1,4 +1,11 @@
 .elements__image {
   width: 100%;
+  height: 282px;
   border-radius: 10px 10px 0 0;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.elements__image:hover {
+  opacity: 0.9;
 }
