--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,4 +1,4 @@
-.popup__information {
+.popup__title {
   width: 358px;
   margin: 34px auto 37px;
   padding: 0;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (max-width: 621px) {
-  .popup__information {
+  .popup__title {
     width: 238px;
     margin: 25px auto;
   }
