--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,9 +1,24 @@
 .popup {
-  display: none;
+  /*display: none;      проверка
   width: 100%;
   height: 100vh;
   top: 0;
   left: 0;
   position: fixed;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.5);*/
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-width: 320px;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /*display: none;*/
+  opacity: 0;
+  visibility: hidden;
+  transition: 0.4s opacity, 0.4s visibility;
 }
