--- a/blocks/profile/__button-add-image/profile__button-add-image.css
+++ b/blocks/profile/__button-add-image/profile__button-add-image.css
@@ -1,4 +1,4 @@
-.profile__button-add {
+.profile__button-add-image {
   width: 150px;
   height: 50px;
   margin: auto 0 auto auto;
@@ -9,20 +9,19 @@
   cursor: pointer;
 }
 
-.profile__button-add:hover {
+.profile__button-add-image:hover {
   opacity: 0.6;
 }
 
 @media screen and (max-width: 986px) {
-  .profile__button-add {
+  .profile__button-add-image {
     width: 581px;
     margin: 0;
   }
 }
 
 @media screen and (max-width: 621px) {
-  .profile__button-add {
-    width: 88.125%;
-    min-width: 282px;
+  .profile__button-add-image {
+    width: 282px;
   }
 }
