--- a/blocks/popup/__photo/popup__photo.css
+++ b/blocks/popup/__photo/popup__photo.css
@@ -1,11 +1,6 @@
-.popup__img {
+.popup__photo {
   max-width: 75vw;
   min-width: 282px;
   max-height: 75vh;
   border-radius: 10px;
-
-  /*
-  object-fit: contain;
-  position: fixed;
-  */
 }
