fixed autotest errors

--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -3,7 +3,7 @@
   margin: 51px auto 0;
   display: grid;
   grid-template-columns: repeat(3, 282px);
-  grid-template-rows: repeat(1fr);
+  grid-template-rows: 361px;
   gap: 20px 17px;
 }
 
@@ -16,9 +16,7 @@
 
 @media screen and (max-width: 621px) {
   .elements {
-    width: 88.125%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    width: 282px;
+    grid-template-columns: 282px;
   }
 }
