--- a/blocks/popup/__button-close/popup__button-close.css
+++ b/blocks/popup/__button-close/popup__button-close.css
@@ -1,13 +1,13 @@
 .popup__button-close {
   width: 40px;
   height: 40px;
-  position: fixed;
   top: -40px;
   right: -40px;
   background: rgba(0, 0, 0, 0);
   border: none;
   cursor: pointer;
   padding: 0;
+  position: absolute;
 }
 
 .popup__button-close:hover {
