--- a/blocks/popup/__button-save/popup__button-save.css
+++ b/blocks/popup/__button-save/popup__button-save.css
@@ -20,6 +20,14 @@
   opacity: 0.8;
 }
 
+.popup__button-save:disabled {
+  background: #ffffff;
+  pointer-events: none;
+  border: 1px solid #000000;
+  color: #000000;
+  opacity: 0.2;
+}
+
 @media screen and (max-width: 621px) {
   .popup__button-save {
     width: 238px;
