--- a/src/blocks/profile/__about/profile__about.css
+++ b/src/blocks/profile/__about/profile__about.css
@@ -1,4 +1,4 @@
-.profile__job {
+.profile__about {
   width: 100%;
   font-family: "Inter", ‘Arial’, sans-serif;
   font-style: normal;
@@ -13,14 +13,14 @@
 }
 
 @media screen and (max-width: 986px) {
-  .profile__job {
+  .profile__about {
     margin: 14px 0 0 0;
     text-align: center;
   }
 }
 
 @media screen and (max-width: 621px) {
-  .profile__job {
+  .profile__about {
     font-size: 14px;
     line-height: 17px;
   }
