--- a/src/blocks/popup/__heading/popup__heading.css
+++ b/src/blocks/popup/__heading/popup__heading.css
@@ -6,7 +6,7 @@
   font-size: 24px;
   line-height: 23px;
   color: #000000;
-  margin: 0;
+  margin: 0 0 10px 0;
 }
 
 @media screen and (max-width: 621px) {
