--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -32,9 +32,9 @@
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__heading/popup__heading.css);
-/* @import url(../blocks/popup/__form-input/popup__form-input.css);
+@import url(../blocks/popup/__form-input/popup__form-input.css);
 @import url(../blocks/popup/__form-input-error/popup__form-input-error.css);
-@import url(../blocks/popup/__form-input-error/_active/popup__form-input-error_active.css); */
+@import url(../blocks/popup/__form-input-error/_active/popup__form-input-error_active.css);
 @import url(../blocks/popup/__button-save/popup__button-save.css);
 @import url(../blocks/popup/__button-save/_inactive/popup__button-save_inactive.css);
 @import url(../blocks/popup/__image-container/popup__image-container.css);
